--- a/PersonalWebSite.Front/Resources/Components/Cv/CvAboutMe.fr.resx
+++ b/PersonalWebSite.Front/Resources/Components/Cv/CvAboutMe.fr.resx
@@ -119,13 +119,13 @@
   </resheader>
   <data name="Journey" xml:space="preserve">
     <value>&lt;p&gt; 
-Après un CDI  de 5 ans chez un petit éditeur de logiciel spécialisé dans la gestion de centres médicaux, Je re-démarre actuellement une activité freelance pour diversifier mon activité, tout en continuant à suivre ce client.
+Après un CDI  de 5 ans chez un petit éditeur de logiciel spécialisé dans la gestion de centres médicaux, Je re-démarre actuellement une activité freelance pour diversifier mon activité.
 &lt;/p&gt;
 &lt;p&gt;
-    Menant une vie de nomade depuis 7 ans, le télé-travail et la liberté dans mon mode d'intervention est une priorité si je dois travailler avec une entreprise. Je compense ces avantages par une forte expertise, une autonomie totale, et je peux me déplacer ponctuellement n'importe ou dans le monde si le besoin s'en fait sentir.
+    Menant une vie de nomade depuis 7 ans, le télé-travail et la liberté dans mon mode d'intervention est une priorité si je dois travailler avec une entreprise. Je compense ces avantages par une forte expertise, une autonomie totale, et je peux me déplacer ponctuellement n'importe ou dans le monde si le besoin en est.
 &lt;/p&gt;
 &lt;p&gt;
-    Fort de 10 années d'expériences dans le développement d'applications,Je suis passionné par les technologies .NET depuis 2007, année où j'ai commencé mes études. Je suis compétent sur toute la chaîne technologique Microsoft, pour du développement d'applications et développement web général, du conseil technologique, du lead de projet technique, de la formation, de l'expertise.
+    Fort de 10 années d'expériences dans le développement d'applications, je suis passionné par les technologies .NET depuis 2007, année où j'ai commencé mes études. Je suis compétent sur toute la chaîne technologique Microsoft, pour du développement d'applications et développement web général, du conseil technologique, du lead de projet technique, de la formation, de l'expertise.
 &lt;/p&gt;
 &lt;p&gt;
     J'aime le travail diversifié, de qualité, et les environnements de travail dynamique dans un esprit agile. Je tente systématiquement de produire un code modulaire, maintenable, documenté, le plus simple possible et respectueux des meilleures pratique et design pattern existants.
