--- a/PersonalWebSite.Front/Resources/Components/Cv/CvAboutMe.resx
+++ b/PersonalWebSite.Front/Resources/Components/Cv/CvAboutMe.resx
@@ -119,16 +119,16 @@
   </resheader>
   <data name="Journey" xml:space="preserve">
     <value>&lt;p&gt;
-After a 5 years in a permanent contract in small software editor specialized in the medical field, i start again a freelance activity to diversify my activity, while continuing to follow this client.
+After a 5 years in a permanent contract in a small software editor specialized in the medical field, i start again a freelance status to diversify my activities.
 &lt;/p&gt;
 &lt;p&gt;
-I lead a nomadic life for 4 years, so the remote position is a priority if i have to work with a company. I compensate this with a strong expertise and autonomy, and i can ponctually move anywhere in the world if its needed.
+I lead a nomadic life for 7 years, so the remote position is a priority if i have to work with a company. I compensate this with a strong expertise and autonomy, and i can ponctually move anywhere in the world if its needed.
 &lt;/p&gt;
 &lt;p&gt;
-Software and web developer with 10 years experience in different companies, I developed various technicals skills and large ability to adapt to various organizations. 
+Software and web developer with 10 years experience in different companies, I developed various technicals skills and large ability to adapt to various organizations. I am competent across the entire Microsoft technology chain, for application development and general web development, technological consulting, technical project leadership, training, expertise.
 &lt;/p&gt;
 &lt;p&gt;
-Be reliable, learn and sharing knowledge, autonomy and adaptability are my main characteristics.
+I like diverse and quality work in dynamic work environments. I systematically try to produce a modular, maintainable and documented code, as simple as possible and respectful of best practices and existing design patterns.
 &lt;/p&gt;</value>
   </data>
   <data name="MyJourney" xml:space="preserve">
