--- a/PersonalWebSite.Front/Resources/Components/Cv/CvExperience.fr.resx
+++ b/PersonalWebSite.Front/Resources/Components/Cv/CvExperience.fr.resx
@@ -117,6 +117,37 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="CteasyDate" xml:space="preserve">
+    <value>2016-2018 (3 ans)</value>
+  </data>
+  <data name="CteasyDescription" xml:space="preserve">
+    <value>&lt;ul&gt;
+&lt;li&gt;Accompagnement du client dans sa stratégie digitale.Recueil des besoins, analyse, chiffrage et développements.
+Travail réalisé en collaboration avec un autre freelance s’occupant plus de la gestion de
+projet et d’une partie de l’architecture.&lt;/li&gt;
+&lt;li&gt;2016 : Développement V3. Réécriture du site dans le CMS Umbraco et passage à ASP .NET MVC.
+Développement du tunnel d’achat en SPA . Développement d’un back-end en angularJs pour le
+personnel CTEasy et le service client. Mise en place de la prise de rendez-vous en ligne en développant
+des connecteurs à une multitude de planificateurs utilisés par les centres de contrôle technique.&lt;/li&gt;
+&lt;li&gt;2017 : Développement V4. Réécriture complète de la couche business dans une optique de maintenabilité, de performance et de qualité de service. Assainissement de la base de données. Intégration du paiement directement dans le tunnel d’achat. Paiement automatique des centres via la génération
+d’un fichier de virement journalier. Traçabilité de l’intégralité des mouvements financiers pour une
+génération comptable automatisé (FEC). Refonte de la gestion des logs, de l’envoie mail et sms.
+Refonte graphique totale.&lt;/li&gt;
+&lt;li&gt;2018 : Développement V5. Refonte complète de la logique d’offres proposés sur le site via la mise
+en place du revenue management.Algorithme de de calcul du planning proposé aux clients et des
+tarifs portés par les créneaux horaires en fonction du modèle de Revenue Management associé au
+centre. Fonctionnement en mode déconnectés avec synchronisation des créneaux libres et pris en
+arrière plan ou par webHook en fonction des planificateurs. Évolution du back-end angular pour
+pouvoir manipuler des modèles de vente complexe associé à chaque centre. Mise en place des types
+de véhicule et énergies multiple.&lt;/li&gt;
+&lt;/ul&gt;</value>
+  </data>
+  <data name="CteasySoftware" xml:space="preserve">
+    <value>Plateforme e-commerce</value>
+  </data>
+  <data name="CteasyTitle" xml:space="preserve">
+    <value>Freelance Développeur .net/web fullstack</value>
+  </data>
   <data name="GeckosDate" xml:space="preserve">
     <value>2019-2023 (5 ans)</value>
   </data>
